[tool.poetry]
name = "repl_pygame_Frogger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
replit-python-lsp-server = {version = "^1.5.9", extras = ["yapf", "rope", "pyflakes"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
